roosterinvul, beschikbaarheid invul, basic implementation of JWT authentication, roosterinvul tests, data persistense with roosterinvul and beschikbaarheid